Fix: responsive alignment

--- a/styles.less
+++ b/styles.less
@@ -113,7 +113,7 @@
   }
 
   @media (min-width: 605px) and (max-width: 900px) {
-    padding: 0.8rem 1.5rem;
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -306,13 +306,26 @@
 // Subscribe Section
 .subscribe-section {
   .subscribe-container {
+    position: relative;
     padding: 8em 0;
+
+    @media (min-width: 605px) and (max-width: 900px) {
+      padding: 4em 0;
+    }
+
     .subscribe-wrapper {
       .centerTheme();
+      display: flex;
+      justify-content: flex-end;
+
+      @media (max-width: 600px) {
+        display: block;
+      }
       .subscribe-text-wrapper {
-        padding-left: 4rem;
+        width: 40%;
 
         @media (max-width: 600px) {
+          width: 100%;
           padding: 0 1rem 0 1rem;
           text-align: center;
         }
@@ -326,7 +339,7 @@
         }
         .subscribe-description {
           .mainDescription();
-          width: 50%;
+          width: 100%;
 
           @media (max-width: 600px) {
             width: 100%;
@@ -339,7 +352,7 @@
           }
 
           .subscribe-input {
-            width: 25%;
+            width: 60%;
             padding: 1rem 0 1rem 1rem;
             font-family: light;
             font-size: 1rem;
@@ -352,8 +365,9 @@
             }
 
             @media (min-width: 605px) and (max-width: 900px) {
-              width: 30%;
-              padding: 0.7rem 0 0.7rem 0.8rem;
+              width: 60%;
+              font-size: 0.7rem;
+              padding: 0.5rem 0 0.5rem 0.8rem;
             }
           }
           .subscribe-button {
@@ -373,6 +387,17 @@
       }
     }
     .subscribe-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -2;
+
+      @media (max-width: 600px) {
+        display: none;
+      }
     }
   }
 }
@@ -417,7 +442,7 @@
           .footerBasicDescription();
 
           @media (max-width: 600px) {
-            padding: 0;
+            padding: 0 2rem;
           }
         }
       }
